fix: stretch of Promo

--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,4 +1,11 @@
 .promo {
+	max-width: 1280px;
+	margin: 20px auto auto;
+}
+
+.promo__container {
+	max-width: calc(100% - 80px);
+	margin: 0 auto;
 	position: relative;
 	justify-content: center;
 	display: flex;
@@ -7,7 +14,6 @@
 	user-select: none;
 	background-color: #272727;
 	height: 493px;
-	margin: 20px 40px 0 40px;
 }
 
 .promo__title {
@@ -22,9 +28,9 @@
 }
 
 @media screen and (max-width: 768px) {
-	.promo {
-		margin: 20px 20px 0 20px;
-		height: 834px;
+	.promo__container {
+		max-width: calc(100% - 40px);
+		height: 588px;
 	}
 	.promo__title {
 		font-size: 40px;
@@ -34,9 +40,9 @@
 }
 
 @media screen and (max-width: 600px) {
-	.promo {
-		margin: 14px 14px 0 14px;
-		height: 588px;
+	.promo__container {
+		max-width: calc(100% - 28px);
+		height: 586px;
 	}
 	.promo__title {
 		font-size: 29px;
